@@ -1,3 +1,7 @@
+2007-06-27  Scott Reeves <sreeves@novell.com> 
+
+	* src/PreferencesDialog.cs, src/Application.cs: preferences update
+
 2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* src/Makefile.am, giver.mdp, configure.ac: removed evolution-sharp
